--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android" >
@@ -11,4 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.shakt.baked.MapActivity" />
-</LinearLayout>
+
+    <Button
+        android:id="@+id/nslcButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|top"
+        android:text="@string/nslc_button"
+        android:layout_marginTop="20dp"
+        />
+
+</RelativeLayout>
