--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -19,6 +19,7 @@
         android:layout_gravity="end|top"
         android:text="@string/nslc_button"
         android:layout_marginTop="20dp"
+        android:onClick="onClick"
         />
 
 </RelativeLayout>
