--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,16 @@
         android:layout_marginStart="60dp"
         android:text="Map" />
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/info_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/map_button"
+            android:layout_below="@+id/map_button"
+            android:layout_marginTop="17dp"
+            android:text="Info" />
+
+    </RelativeLayout>
 
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
