--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,14 @@
         android:layout_marginStart="60dp"
         android:text="Map" />
 
-</RelativeLayout>
+        <Button
+
+            android:id="@+id/btn_useraccount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="user Account" />
+
+    </RelativeLayout>
 
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
