--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -61,9 +61,11 @@
 
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
+        android:id="@+id/navigation_drawer"
         android:layout_height="match_parent"
         app:menu="@menu/navigation_menu"
         android:layout_gravity="start"
+        app:headerLayout="@layout/navigation_title"
         >
 
     </android.support.design.widget.NavigationView>
