--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/nav_acct"
-        android:title="account"></item>
+
+    <item
+        android:id="@+id/nav_acct"
+        android:icon="@drawable/ic_account_circle_black_24dp"
+        android:title="Account"></item>
+    <item
+        android:id="@+id/nav_login"
+        android:icon="@drawable/ic_account_circle_black_24dp"
+        android:title="Login"></item>
+    <item
+        android:id="@+id/nav_map"
+        android:icon="@drawable/ic_map_black_24dp"
+        android:title="Map"></item>
+    <item
+        android:id="@+id/nav_info"
+        android:icon="@drawable/ic_info_black_24dp"
+        android:title="Info"></item>
+
 </menu>
