--- a/app/src/main/res/layout/fragment_home_tab_1.xml
+++ b/app/src/main/res/layout/fragment_home_tab_1.xml
@@ -1,4 +1,4 @@
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,4 +14,11 @@
         android:layout_marginStart="60dp"
         android:text="Info" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/account_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="user account"/>
+
+
+</LinearLayout>
