--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,6 +18,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
 
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
@@ -26,9 +30,16 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:title="@string/welcome"
                 android:gravity="center">
-
             </android.support.v7.widget.Toolbar>
-
+                <!--TODO-->
+                <!--make a search icon here-->
+                <android.support.v7.widget.SearchView.SearchAutoComplete
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="end"
+                    android:hint="Search Weed here"
+                    />
+            </FrameLayout>
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
