--- a/app/src/main/res/layout/activity_order_histort.xml
+++ b/app/src/main/res/layout/activity_order_histort.xml
@@ -14,5 +14,11 @@
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         />
+    <android.support.v7.widget.ListViewCompat
+        android:id="@+id/order_history_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.ListViewCompat>
 
 </LinearLayout>
