--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,9 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+
 
 
             <android.support.v7.widget.Toolbar
@@ -33,13 +31,7 @@
             </android.support.v7.widget.Toolbar>
                 <!--TODO-->
                 <!--make a search icon here-->
-                <android.support.v7.widget.SearchView.SearchAutoComplete
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end"
-                    android:hint="Search Weed here"
-                    />
-            </FrameLayout>
+
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
@@ -76,8 +68,7 @@
         android:layout_height="match_parent"
         app:menu="@menu/navigation_menu"
         android:layout_gravity="start"
-        app:headerLayout="@layout/navigation_title"
-        >
+        app:headerLayout="@layout/navigation_title">
 
     </android.support.design.widget.NavigationView>
 
