--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#16502d</color>
+    <color name="colorPrimary">#28ce6a</color>
     <color name="colorPrimaryDark">#033b19</color>
     <color name="colorAccent">#fff176</color>
     <color name="colorPrimaryText">#050505</color>
