--- a/app/src/main/res/layout/infotab.xml
+++ b/app/src/main/res/layout/infotab.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ScrollView01"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:scrollbars="none" >
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -53,8 +59,22 @@
 
         android:layout_marginTop="13dp">
 
-    </android.support.v7.widget.RecyclerView>
-</RelativeLayout>
 
+    </android.support.v7.widget.RecyclerView>
+    <net.alhazmy13.wordcloud.WordCloudView
+        android:id="@+id/wordCloud"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_below="@+id/mRecylcerID"/>
+    <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/Cchart"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_below="@+id/wordCloud"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="53dp" />
+
+</RelativeLayout>
+</ScrollView>
 
 
