--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,6 +22,7 @@
 
 
             <android.support.v7.widget.Toolbar
+                android:id="@+id/home_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_scrollFlags="scroll|enterAlways"
@@ -29,10 +30,6 @@
                 app:title="@string/welcome"
                 android:gravity="center">
             </android.support.v7.widget.Toolbar>
-                <!--TODO-->
-                <!--make a search icon here-->
-
-
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
