--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="colorPrimary">#28ce6a</color>
     <color name="colorPrimaryDark">#033b19</color>
-    <color name="colorAccent">#fff176</color>
+    <color name="colorAccent">#cddc39</color>
+    <color name="colorAccentDark">#929c28</color>
     <color name="colorPrimaryText">#050505</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="light_gery">#cccccc</color>
 </resources>
