--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android" >
@@ -14,11 +14,24 @@
 
     <Button
         android:id="@+id/nslcButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65sp"
+        android:layout_height="65sp"
         android:layout_gravity="end|top"
         android:text="@string/nslc_button"
+        android:textSize="12sp"
+        android:layout_marginTop="10sp"
+        android:layout_marginStart="10sp"
         android:onClick="onClick"
-        />
+        android:background="@drawable/round_button"
+         />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerViewMap"
+        android:orientation="horizontal"
+        >
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
