--- a/app/src/main/res/layout/infotab.xml
+++ b/app/src/main/res/layout/infotab.xml
@@ -24,20 +24,20 @@
         android:text="Effects" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/Negative"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/Effects"
+        android:layout_above="@+id/chart"
         android:layout_centerHorizontal="true"
         android:text="Negative" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/Happy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button2"
+        android:layout_alignTop="@+id/Negative"
         android:layout_marginStart="27dp"
-        android:layout_toEndOf="@+id/button2"
+        android:layout_toEndOf="@+id/Negative"
         android:text="Happy" />
 
     <com.github.mikephil.charting.charts.BarChart
@@ -66,13 +66,19 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@+id/mRecylcerID"/>
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/Cchart"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/PostRecylcerID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/wordCloud"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp" />
+
+        android:layout_marginTop="13dp">
+
+
+    </android.support.v7.widget.RecyclerView>
+
 
 </RelativeLayout>
 </ScrollView>
