--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,22 +14,14 @@
         android:layout_marginTop="30dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/userName"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.9"
-            android:hint="User Name: "
-            android:textAlignment="textEnd" />
-
         <EditText
             android:id="@+id/user_name_input"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
             android:layout_marginStart="10dp"
             android:layout_weight="0.4"
-            android:hint="User Name"/>
+            android:hint="Email ID" />
     </LinearLayout>
 
     <LinearLayout
@@ -37,14 +29,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/password"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.9"
-            android:hint="Password: "
-            android:textAlignment="textEnd" />
 
         <EditText
             android:id="@+id/password_input"
@@ -66,10 +50,29 @@
 
         <Button
             android:id="@+id/loginButton"
-            android:layout_width="wrap_content"
+            style="@style/ColoredButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@color/colorPrimaryDark"
             android:text="@string/login" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/gmailLoginButton"
+            style="@style/ColoredButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/gmail_login" />
     </LinearLayout>
 
     <LinearLayout
@@ -81,9 +84,10 @@
 
         <Button
             android:id="@+id/anonymousButton"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@color/cardview_light_background"
             android:text="@string/anonymousLogin" />
     </LinearLayout>
 
