--- a/app/src/main/res/layout/activity_product_desc.xml
+++ b/app/src/main/res/layout/activity_product_desc.xml
@@ -5,19 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-<android.support.v7.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
-    android:layout_gravity="center"
-    android:layout_width="250dp"
-    android:layout_height="250dp"
-    card_view:cardCornerRadius="4dp">
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/product_recycler"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <TextView
-        android:text="Hello Card"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-</android.support.v7.widget.CardView>
-
+</android.support.v7.widget.RecyclerView>
 </LinearLayout>
