--- a/app/src/main/res/layout/fragment_home_tab_2.xml
+++ b/app/src/main/res/layout/fragment_home_tab_2.xml
@@ -31,7 +31,7 @@
             android:background="@drawable/round_button"
             />
         <Button
-            android:id="@+id/gotomap"
+            android:id="@+id/gotoMap"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"/>
